--- a/date/2025-04/page-3.htm
+++ b/date/2025-04/page-3.htm
@@ -250,16 +250,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-89762.htm" title="我们如何从MySQL表中删除多行？">我们如何从MySQL表中删除多行？</a></li>
-                        <li class="py-2"><a href="/news/article-109807.htm" title="使用etcd选举sdk实践master/slave故障转移_在线工具">使用etcd选举sdk实践master/slave故障转移_在线工具</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-2-node-share-links.htm" title="「4月2日」最高速度22.8M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接">「4月2日」最高速度22.8M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-6-free-node-subscribe-links.htm" title="「4月6日」最高速度22.9M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接">「4月6日」最高速度22.9M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-16-free-subscribe-node.htm" title="「4月16日」最高速度20.2M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接">「4月16日」最高速度20.2M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-106332.htm" title="投资医美要多少钱（投资 医美）">投资医美要多少钱（投资 医美）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-9-free-subscribe-node.htm" title="「5月9日」最高速度21.4M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接">「5月9日」最高速度21.4M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/news/article-104832.htm" title="宠物疫苗批号有假的吗 宠物疫苗批号有假的吗怎么查">宠物疫苗批号有假的吗 宠物疫苗批号有假的吗怎么查</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-3-node-share.htm" title="「5月3日」最高速度22.6M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接">「5月3日」最高速度22.6M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-27-clash-v2ray-ss-ssr.htm" title="「4月27日」最高速度20.2M/S，2025年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接">「4月27日」最高速度20.2M/S，2025年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-86867.htm" title="动物医院哪里好一点啊（动物医院大众点评）">动物医院哪里好一点啊（动物医院大众点评）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-18-node-share-links.htm" title="「4月18日」最高速度21.3M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接">「4月18日」最高速度21.3M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-89763.htm" title="三国杀武将登场特效是什么样子的（三国杀武将限定技）">三国杀武将登场特效是什么样子的（三国杀武将限定技）</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-4-17-free-v2ray-subscribe.htm" title="「4月17日」最高速度22.5M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「4月17日」最高速度22.5M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-29-node-share.htm" title="「4月29日」最高速度22.1M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「4月29日」最高速度22.1M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-105524.htm" title="品牌门窗哪个比较好?选哪个质量好点的(门窗品牌那个好)">品牌门窗哪个比较好?选哪个质量好点的(门窗品牌那个好)</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-14-free-subscribe-node.htm" title="「4月14日」最高速度19.2M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「4月14日」最高速度19.2M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-19-free-v2ray.htm" title="「5月19日」最高速度20.2M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「5月19日」最高速度20.2M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -271,7 +271,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">89</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
